--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Question Input</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="{{url_for ('static', filename='css/style.css')}}">
 </head>
 <body>
 
@@ -24,7 +24,7 @@
     </div>
 </div>
 
-<script src="index.js"></script>
+<script src="{{url_for ('static', filename='js/index.js')}}"></script>
 
 </body>
 </html>
